# mlx-pipe

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mlx_forge/: config.py  hub.py  registry.py
src/mlx_forge/backends/: stt.py  tts.py
src/mlx_forge/cli/: config.py  list.py  llm.py  main.py  pull.py  remove.py  stt.py  tts.py
src/mlx_pipe/: config.py
src/mlx_pipe/backends/: __init__.py  llm.py
src/mlx_pipe/cli/: config.py  list.py  llm.py  main.py  pull.py  remove.py  stt.py  tts.py
tests/: test_cli_main.py  test_config.py  test_llm_backend.py  test_llm_cli.py  test_stt_backend.py  test_tts_backend.py
