[build-system]
requires = ["setuptools<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-forge"
version = "0.1.0"
description = "Unix-style CLI wrappers for MLX speech and language models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlx>=0.25.2,<0.31.1",
    "mlx-lm>=0.22.0",
    "mlx-audio>=0.3.0,<0.4.3",
    "huggingface_hub>=0.27.0",
    "rich>=13.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
mlx-forge = "mlx_forge.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
